# mjcf_editor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mjcf_editor/model/: geometry.py  raycaster.py
mjcf_editor/utils/: mesh_loader.py
mjcf_editor/view/: opengl_view.py  property_panel.py  property_view.py
xml_editor/: main.py
xml_editor/model/: geometry.py  xml_parser.py
xml_editor/view/: control_panel.py  opengl_view.py  property_view.py
xml_editor/viewmodel/: control_viewmodel.py  hierarchy_viewmodel.py  property_viewmodel.py  scene_viewmodel.py
