[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mjcf-editor"
version = "0.1.0"
description = "MuJoCo场景编辑器"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["PyQt5", "MuJoCo", "3D", "Editor"]
authors = [
    {name = "Authors"}
]
dependencies = [
    "PyQt5>=5.15.0",
    "numpy>=1.20.0",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
gsrenderer = [
    "discoverse @ git+https://github.com/TATP-233/DISCOVERSE.git",
]

[project.scripts]
mjcf_editor = "mjcf_editor.main:main"

[tool.setuptools]
packages = ["mjcf_editor"]
